Added links to footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>World clock</h1>
     <footer>
-        This project was coded by <a href="http://" target="_blank">Dorine</a> and is on <a href="http://" target="_blank">github</a> hosted on <a href="http://" target="_blank">Netlify</a>
+        This project was coded by <a href="https://github.com/Dorineanyango" target="_blank">Dorine</a> and is on <a href="https://github.com/Dorineanyango/world-clock" target="_blank">github</a> hosted on <a href="http://" target="_blank">Netlify</a>
     </footer>
    <script src="javascript/script.js"></script> 
 </body>
