--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>World clock</h1>
+    <div class="container">
+        <h1>World clock</h1>
+        <select name="" id="">
+            <option value="" selected>Select a city..</option>
+            <option value="">Nairobi</option>
+            <option value="">London</option>
+            <option value="">Tokyo</option>
+        </select>
+
+        <div class="city">
+            <h2>Los Angeles</h2>
+            <div class="date">August 15th 2024</div>
+            <div class="time">08:30 am</div>
+        </div>
+        <div class="city"></div>
+            <h2>Sydney</h2>
+            <div class="date">August 15th 2024</div>
+            <div class="time">08:30 am</div>
+        </div>
+    </div>
     <footer>
         This project was coded by <a href="https://github.com/Dorineanyango" target="_blank">Dorine</a> and is on <a href="https://github.com/Dorineanyango/world-clock" target="_blank">github</a> hosted on <a href="http://" target="_blank">Netlify</a>
     </footer>
