modifief html and css files

--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
         </select>
 
         <div class="city">
-            <h2>Los Angeles</h2>
-            <div class="date">August 15th 2024</div>
-            <div class="time">08:30 am</div>
+            <div>
+                <h2>Los Angeles 🇺🇸</h2>
+                <div class="date">August 15th 2024</div>
+            </div>
+            <div class="time">1:08:30 <small>AM</small></div>
         </div>
-        <div class="city"></div>
-            <h2>Sydney</h2>
-            <div class="date">August 15th 2024</div>
-            <div class="time">08:30 am</div>
+        <div class="city">
+            <div>
+                <h2>Paris 🇫🇷</h2>
+                <div class="date">August 15th 2024</div>
+            </div>
+            <div class="time">1:08:30 <small>AM</small></div>
         </div>
     </div>
     <footer>
-        This project was coded by <a href="https://github.com/Dorineanyango" target="_blank">Dorine</a> and is on <a href="https://github.com/Dorineanyango/world-clock" target="_blank">github</a> hosted on <a href="http://" target="_blank">Netlify</a>
+        This project was coded by <strong>Dorine</strong></a> and is on <a href="https://github.com/Dorineanyango/world-clock" target="_blank">Github</a> hosted on <a href="http://" target="_blank">Netlify</a>
     </footer>
    <script src="javascript/script.js"></script> 
 </body>
