--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World-clock</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.45/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,24 +13,24 @@
         <h1>World clock</h1>
         <select name="" id="">
             <option value="" selected>Select a city..</option>
-            <option value="">Nairobi</option>
+            <option value="">Los Angeles</option>
             <option value="">London</option>
             <option value="">Tokyo</option>
         </select>
 
-        <div class="city">
+        <div class="city" id="nairobi">
             <div>
-                <h2>Los Angeles 🇺🇸</h2>
-                <div class="date">August 15th 2024</div>
+                <h2>Nairobi 🇰🇪</h2>
+                <div class="date"></div>
             </div>
-            <div class="time">1:08:30 <small>AM</small></div>
+            <div class="time"></div>
         </div>
-        <div class="city">
+        <div class="city" id="paris">
             <div>
                 <h2>Paris 🇫🇷</h2>
-                <div class="date">August 15th 2024</div>
+                <div class="date"></div>
             </div>
-            <div class="time">1:08:30 <small>AM</small></div>
+            <div class="time"></div>
         </div>
     </div>
     <footer>
