Modified html and js file

--- a/index.html
+++ b/index.html
@@ -11,26 +11,29 @@
 <body>
     <div class="container">
         <h1>World clock</h1>
-        <select name="" id="">
-            <option value="" selected>Select a city..</option>
-            <option value="">Los Angeles</option>
-            <option value="">London</option>
-            <option value="">Tokyo</option>
+        <select name="" id="city">
+            <option value="" selected disabled hidden>Select a city..</option>
+            <option value="America/Los_Angeles">Los Angeles</option>
+            <option value="Europe/London">London</option>
+            <option value="Asia/Tokyo">Tokyo</option>
+            <option value="Pacific/Honolulu">Honolulu</option>
         </select>
-
-        <div class="city" id="nairobi">
-            <div>
-                <h2>Nairobi 🇰🇪</h2>
-                <div class="date"></div>
+        
+        <div id="cities">
+            <div class="city" id="nairobi">
+                <div>
+                    <h2>Nairobi 🇰🇪</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
             </div>
-            <div class="time"></div>
-        </div>
-        <div class="city" id="paris">
-            <div>
-                <h2>Paris 🇫🇷</h2>
-                <div class="date"></div>
+            <div class="city" id="paris">
+                <div>
+                    <h2>Paris 🇫🇷</h2>
+                    <div class="date"></div>
+                </div>
+                <div class="time"></div>
             </div>
-            <div class="time"></div>
         </div>
     </div>
     <footer>
