modified html and js files

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1>World clock</h1>
         <select name="" id="city">
             <option value="" selected disabled hidden>Select a city..</option>
+            <option value="current">Current Location</option>
             <option value="America/Los_Angeles">Los Angeles</option>
             <option value="Europe/London">London</option>
             <option value="Asia/Tokyo">Tokyo</option>
-            <option value="Pacific/Honolulu">Honolulu</option>
         </select>
         
         <div id="cities">
@@ -37,7 +37,7 @@
         </div>
     </div>
     <footer>
-        This project was coded by <strong>Dorine</strong></a> and is on <a href="https://github.com/Dorineanyango/world-clock" target="_blank">Github</a> hosted on <a href="http://" target="_blank">Netlify</a>
+        This project was coded by <strong>Dorine</strong></a> and is on <a href="https://github.com/Dorineanyango/world-clock" target="_blank">Github</a> hosted on <a href="https://dorine-world-clock.netlify.app/" target="_blank">Netlify</a>
     </footer>
    <script src="javascript/script.js"></script> 
 </body>
