--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>World clock</h1>
         <select name="" id="city">
             <option value="" selected disabled hidden>Select a city..</option>
-            <option value="current">Current Location</option>
+            <option value="current">My Location</option>
             <option value="America/Los_Angeles">Los Angeles</option>
             <option value="Europe/London">London</option>
             <option value="Asia/Tokyo">Tokyo</option>
